# BGaming

./: .gitignore  NASIL-CALISTIRILIR.md  index.html  package-lock.json  package.json  turkish-patch-sites.json  vite.config.ts
docs/: PLAYNITE-AKTARIM-REHBERI.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  config.ts
src/constants/: platformOptions.ts
src/database/: client.ts  initialize.ts  migrations.ts  ready.ts  seed.ts
src/hooks/: useWidgetPinning.ts
src/layouts/: AppLayout.module.css  AppLayout.tsx
src/pages/: CollectionHealthPage.module.css  CollectionHealthPage.tsx  FavoritesPage.tsx  GamesPage.module.css  GamesPage.tsx  HomePage.module.css  HomePage.tsx  SettingsPage.module.css  SettingsPage.tsx  StatsPage.module.css  StatsPage.tsx  pageRegistry.ts
src/services/: backupService.ts  bulkImportService.ts  closeBehaviorService.ts  collectionHealthService.ts  coverService.ts  devGameData.ts  exportReportService.ts  gameLaunchService.ts  gameService.ts  importService.ts  installedScanService.ts  languageSupportService.ts  libraryInitializationService.ts  libraryMetadataService.ts  metadataService.ts  profileImageService.ts  releaseService.ts  resetService.ts  settingsService.ts  startupService.ts  statsService.ts  steamService.ts  themeService.ts  widgetWindowService.ts  windowModeService.ts
src/styles/: global.css  theme.css
src/types/: game.ts  navigation.ts  settings.ts  theme.ts
src/utils/: coverSource.ts  disableContextMenu.ts  pageTitle.ts  (+6 more)
(+43 files in other folders)
