[package]
name = "bgaming"
version = "1.0.0"
description = "Personal game library desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "bgaming_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
